--- a/gmall-pms/src/main/resources/application.yml
+++ b/gmall-pms/src/main/resources/application.yml
@@ -14,7 +14,7 @@ server:
 #    base-url: http://localhost:9411 # zipkin地址
 #    discovery-client-enabled: false
 #    sender:
-#      type: web
+#      type: webs
 #  sleuth:
 #    sampler:
 #      probability: 1 # 采集率设置为1，全部采集
