--- a/pom.xml
+++ b/pom.xml
@@ -24,6 +24,7 @@
         <module>gmall-sms</module>
         <module>gmall-ums</module>
         <module>gmall-wms</module>
+        <module>gmall-sms-interface</module>
     </modules>
 
     <properties>
