--- a/gmall-generator/src/main/resources/generator.properties
+++ b/gmall-generator/src/main/resources/generator.properties
@@ -3,13 +3,13 @@
 mainPath=com.atguigu
 #包名
 package=com.atguigu.gmall
-moduleName=wms
+moduleName=ums
 #作者
 author=qmr
 #Email
 email=qmr@atguigu.com
 #表前缀（类名不会包含表前缀）
-tablePrefix=wms_
+tablePrefix=ums_
 
 #类型转换，配置信息
 tinyint=Integer
