--- a/gmall-sms/pom.xml
+++ b/gmall-sms/pom.xml
@@ -14,6 +14,18 @@
     <description>谷粒商城营销系统</description>
 
     <dependencies>
+
+        <!-- 分布式事务 seata -->
+        <dependency>
+            <groupId>com.alibaba.cloud</groupId>
+            <artifactId>spring-cloud-alibaba-seata</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>io.seata</groupId>
+            <artifactId>seata-all</artifactId>
+            <version>1.2.0</version>
+        </dependency>
+
         <dependency>
             <groupId>com.atguigu</groupId>
             <artifactId>gmall-sms-interface</artifactId>
