--- a/gmall-sms/src/main/resources/application.yml
+++ b/gmall-sms/src/main/resources/application.yml
@@ -34,3 +34,8 @@ mybatis-plus:
   global-config:
     db-config:
       id-type: auto #id生成策略
+spring:
+  cloud:
+    alibaba:
+      seata:
+        tx-service-group: gmall_tx_group
