--- a/pom.xml
+++ b/pom.xml
@@ -25,6 +25,8 @@
         <module>gmall-ums</module>
         <module>gmall-wms</module>
         <module>gmall-sms-interface</module>
+        <module>gmall-pms-interface</module>
+        <module>gmall-wms-interface</module>
     </modules>
 
     <properties>
