配置rabbitMQ来同步mysql与es的数据

--- a/gmall-pms/src/main/resources/application.yml
+++ b/gmall-pms/src/main/resources/application.yml
@@ -42,3 +42,11 @@ spring:
     alibaba:
       seata:
         tx-service-group: gmall_tx_group
+  rabbitmq:
+    host: 192.168.157.132
+    virtual-host: /muran
+    username: muran
+    password: muran
+    publisher-confirm-type: correlated
+    publisher-returns: true
+
