--- a/gmall-gateway/src/main/resources/application.yml
+++ b/gmall-gateway/src/main/resources/application.yml
@@ -28,4 +28,8 @@ spring:
           uri: lb://wms-service
           predicates:
             - Path=/wms/**
+        - id: search-route
+          uri: lb://search-service
+          predicates:
+            - Path=/search/**
 
