--- a/gmall-pms/pom.xml
+++ b/gmall-pms/pom.xml
@@ -14,6 +14,12 @@
     <description>谷粒商城商品管理系统</description>
 
     <dependencies>
+        <!-- RabbitMQ -->
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-amqp</artifactId>
+        </dependency>
+
         <dependency>
             <groupId>com.atguigu</groupId>
             <artifactId>gmall-pms-interface</artifactId>
