--- a/gmall-search/src/main/resources/application.yml
+++ b/gmall-search/src/main/resources/application.yml
@@ -23,6 +23,19 @@ spring:
       uris: http://192.168.157.132:9200
   jackson:
     default-property-inclusion: non_null
+  thymeleaf:
+    cache: false
+  rabbitmq:
+    host: 192.168.157.132
+    port: 5672
+    virtual-host: /muran
+    username: muran
+    password: muran
+    listener:
+      simple:
+        prefetch: 1
+        acknowledge-mode: manual
+        concurrency: 3
 feign:
   sentinel:
     enabled: true # 开启feign的sentinel功能
