--- a/gmall-index/pom.xml
+++ b/gmall-index/pom.xml
@@ -15,6 +15,14 @@
 
 
     <dependencies>
+        <!-- 分布式锁 redisson -->
+        <dependency>
+            <groupId>org.redisson</groupId>
+            <artifactId>redisson</artifactId>
+            <version>3.13.5</version>
+        </dependency>
+
+
         <dependency>
             <groupId>com.atguigu</groupId>
             <artifactId>gmall-common</artifactId>
