商品详情模块的完善+CompletableFuture异步编排优化

--- a/gmall-gateway/src/main/resources/application.yml
+++ b/gmall-gateway/src/main/resources/application.yml
@@ -43,4 +43,8 @@ spring:
         - id: item-route
           uri: lb://item-service
           predicates:
+            - Host=item.gmall.com
+        - id: item-route
+          uri: lb://item-service
+          predicates:
             - Path=/item/**
