--- a/gmall-item/src/main/resources/application.yml
+++ b/gmall-item/src/main/resources/application.yml
@@ -24,3 +24,8 @@ spring:
 feign:
   sentinel:
     enabled: true
+threadPool:
+  corePoolSize: 100
+  maximumPoolSize: 500
+  keepAliveTime: 60
+  blockingQueueCapacity: 5000
