璋风矑鍟嗗煄璁㈠崟妯″潡瀹屽杽

--- a/gmall-wms/src/main/resources/application.yml
+++ b/gmall-wms/src/main/resources/application.yml
@@ -25,6 +25,16 @@ spring:
     password: 123456
   redis: # redis的地址
     host: 192.168.157.132
+  rabbitmq:
+    host: 192.168.157.132
+    virtual-host: /muran
+    username: muran
+    password: muran
+    listener:
+      simple:
+        prefetch: 1
+        concurrency: 3
+        acknowledge-mode: manual
 feign:
   sentinel:
     enabled: true
