--- a/pom.xml
+++ b/pom.xml
@@ -29,6 +29,9 @@
         <module>gmall-wms-interface</module>
         <module>gmall-ums-interface</module>
         <module>gmall-cart-interface</module>
+        <module>gmall-cart-interface</module>
+        <module>gmall-oms-interface</module>
+        <module>gmall-cart-interface</module>
     </modules>
 
     <properties>
