--- a/gmall-gateway/src/main/resources/application.yml
+++ b/gmall-gateway/src/main/resources/application.yml
@@ -59,6 +59,12 @@ spring:
           uri: lb://cart-service
           predicates:
             - Host=cart.gmall.com
+        - id: order-route
+          uri: lb://order-service
+          predicates:
+            - Host=order.gmall.com
+          filters:
+            - Auth=/confirm,/submit
 auth:
   jwt:
     pubKeyPath: F:\Java0422\WorkSpace\rsa\rsa.pub
