--- a/gmall-oms/src/main/resources/application.yml
+++ b/gmall-oms/src/main/resources/application.yml
@@ -25,6 +25,19 @@ server:
 #    password: 123456
 #  redis:
 #    host: 192.168.157.132:3306
+spring:
+  rabbitmq:
+    host: 192.168.157.132
+    virtual-host: /muran
+    username: muran
+    password: muran
+    listener:
+      simple:
+        prefetch: 1
+        concurrency: 3
+        acknowledge-mode: manual
+    publisher-confirm-type: correlated
+    publisher-returns: true
 feign:
   sentinel:
     enabled: true # 开启feign的sentinel功能
